starting using bearer token to autenthicate
